# KnightEngine

./: .gitignore  CMakeLists.txt  README.md
bench_output/: BenchResults_20250108_223542.json  BenchResults_20250108_223542.txt  BenchResults_20250108_223657.json  BenchResults_20250108_223657.txt  BenchResults_20250108_224918.json  BenchResults_20250108_224918.txt  BenchResults_20250109_100139.json  BenchResults_20250109_100139.txt  BenchResults_20250109_153704.json  BenchResults_20250109_153704.txt  BenchResults_20250109_153829.json  BenchResults_20250109_153829.txt  BenchResults_20250109_155813.json  BenchResults_20250109_155813.txt  BenchResults_20250109_162722.json  BenchResults_20250109_162722.txt  BenchResults_20250109_163309.json  BenchResults_20250109_163309.txt  BenchResults_20250111_144608.json  BenchResults_20250111_144608.txt  BenchResults_20250111_150406.json  BenchResults_20250111_150406.txt  BenchResults_20250111_151334.json  BenchResults_20250111_151334.txt  BenchResults_20250112_014155.json  BenchResults_20250112_014155.txt  BenchResults_20250112_094619.json  BenchResults_20250112_094619.txt  BenchResults_20250112_100628.json  BenchResults_20250112_100628.txt  BenchResults_20250112_110027.json  BenchResults_20250112_110027.txt  BenchResults_20250112_151635.json  BenchResults_20250112_151635.txt  BenchResults_20250112_152105.json  BenchResults_20250112_152105.txt  BenchResults_20250119_160243.json  capture_20250111_1624.sleepy  capture_20250112_0918.sleepy  capture_20250112_0929.sleepy  (+7 more)
benchmarks/: CMakeLists.txt  board_operations_bench.cpp  main_benchmark.cpp  material_engine_bench.cpp  memory_manager.cpp  memory_manager.hpp  move_generation_bench.cpp  perft_bench.cpp  pext_bench.cpp  syrinx_engine_bench.cpp
engine/: Material_Engine_CHANGELOG.md  material_engine.hpp  random_engine.hpp
engine/uci/: material_engine_main.cpp  random_engine_main.cpp  uci_handler.cpp  uci_handler.hpp
meta/: engine_parameter_tuning.py  engine_version_manager.py  run_benchmarks.py  sprt_test.py
meta/tournament_results/: 20250112_1053.epd  FirstTestTournament_2025101_1002.pgn  GT_20250119_1704.pgn  MatEngV0_313vsRandomEngV1_0__20250111_0139.pgn  MatEngV0_314vsRandomEngV1_0__20250111_1120.pgn  MatEngV0_315vsRandomEngV1_0__20250111_1555.pgn  MatEngV0_317vsRandomEngV1_0__20250112_1053.pgn  MatEngV0_31vsRandomEngV1_0__20250111_0033.pgn  MatEngV0_32vsRandomEngV1_0__20250112_1630.pgn  MatEngV0_3vsRandomEngV1_0__20250111_0019.pgn  MatEngV0_41vsRandomEngV1_0__20250112_2332.pgn  MatEngV0_42vsV0_41vsRandomEngV1_0_20250113_0823.pgn  MatEngV0_42vsV0_41vsRandomEngV1_0_20250113_1214.pgn  MatEngV0_4vsRandomEngV1_0__20250112_2136.pgn  MatEngV0_4vsRandomEngV1_0__20250112_2144.pgn  RRT_20250119_1403.pgn
src/: board_generation.cpp  board_generation.hpp  board_utility.hpp  chess_board.cpp  chess_board.hpp  chess_clock.cpp  chess_clock.hpp  chess_engine_base.cpp  chess_engine_base.hpp  chess_match.cpp  chess_match.hpp  engine_player.cpp  engine_player.hpp  human_player.cpp  human_player.hpp  i_chess_engine.hpp  i_player.hpp  magic_bitboards.hpp  main.cpp  material_engine.hpp  move_history.cpp  move_history.hpp  moves.cpp  moves.hpp  pext_bitboard.cpp  pext_bitboard.hpp  player.hpp  random_engine.hpp  transposition_table.hpp  types.cpp  types.hpp  utility.cpp  utility.hpp  zobrist.cpp  zobrist.hpp
src/engine/: Material_Engine_CHANGELOG.md  Random_Engine_CHANGELOG.md  Syrinx_Engine_CHANGELOG.md  material_engine.hpp  random_engine.hpp  syrinx_engine.hpp
src/engine/uci/: material_engine_main.cpp  syrinx_engine_main.cpp  uci_handler.cpp  uci_handler.hpp
stored_engines/: engine_info.json
test/: CMakeLists.txt  aluckygrenade_vs_Cesaronrinron_2024.05.10.pgn  board_tests.cpp  chess_clock_tests.cpp  chess_match_tests.cpp  engine_player_tests.cpp  execution_time_tests.cpp  game_state_tests.cpp  human_player_tests.cpp  magic_tests.cpp  matein2.txt  matein3.txt  material_engine_tests.cpp  move_generation_tests.cpp  move_validation_tests.cpp  pext_bitboard_tests.cpp  pgn_tests.cpp  san_generation_tests.cpp  syrinx_engine_tests.cpp  utility_tests.cpp
